@@ -1,7 +1,7 @@
 Bug tracking system
 ===================
 
-libxfce4menu uses the bug tracking system at http://bugzilla.xfce.org/
+gdesktopmenu uses the bug tracking system at http://bugzilla.xfce.org/
 hosted and maintained by the Xfce project.
 
 
@@ -16,14 +16,14 @@ Please and send a patch against a recent version of this package. Patches
 against the Subversion trunk branch are most preferable. You can always
 access the trunk branch from 
 
-  http://svn.xfce.org/svn/xfce/libxfce4menu/trunk
+  http://svn.xfce.org/svn/xfce/gdesktopmenu/trunk
 
 
 Feature requests
 ================
 
 Please file feature requests to the Xfce bug tracking system
-(http://bugzilla.xfce.org, product libxfce4menu) with a Severity of
+(http://bugzilla.xfce.org, product gdesktopmenu) with a Severity of
 enhancement. Make sure that your feature request wasn't reported
 already before; requesting a feature several times won't increase
 the chance that it gets added.
@@ -41,19 +41,19 @@ Release process
 
   1) Check out a fresh copy from Subversion
   2) Increment the version number in configure.in.in and the major version
-     number of the library whenever new functions got added
+     number of the library whenever new functions got added.
   3) Update NEWS and ChangeLog, and don't forget to add a note about the new
      release to ChangeLog, so people can see which changes appeared in which
      release.
   4) Check the gtk-doc.
   5) Run make update-po in po/ and update po/de.po (don't forget the header)!
-  6) Unset libxfce4menu_version_tag in configure.in.in and reset it after the
+  6) Unset gdesktopmenu_version_tag in configure.in.in and reset it after the
      release is done.
   7) Verify that make dist works.
   8) "svn commit" the changes.
   9) Create a simple tag for the release,
-      "svn copy https://xfce.org/svn/xfce/libxfce4menu/trunk
-       https://xfce.org/svn/xfce/libxfce4menu/tags/libxfce4menu-X.Y.Ztag"
+      "svn copy https://xfce.org/svn/xfce/gdesktopmenu/trunk
+       https://xfce.org/svn/xfce/gdesktopmenu/tags/gdesktopmenu-X.Y.Ztag"
      where X.Y.Z is the version number and tag is the version tag, i.e. beta1.
  10) Upload the tarballs to xfce.org
  11) Upload the new online documentation to www.xfce.org.
